--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,9 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "AllowedHosts" : "*",
+  "ConnectionStrings" : {
+    "SalesWebMvcContext" : "Server=localhost;useid=developer;password=123456;Database=saleswebmvcappdb"
   }
 }
